--- a/Site Portfolio/index.html
+++ b/Site Portfolio/index.html
@@ -4,40 +4,64 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Start</title>
-    <link rel="icon" type="image/png" sizes="1000x600" href="assets/img/favicon.png">
+    <title>Start2</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/Navbar-With-Button.css">
+    <link rel="stylesheet" href="assets/css/Footer-Basic.css">
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
-<body>
-    <nav class="navbar navbar-light navbar-expand-md py-3" style="color: var(--bs-blue);">
-        <div class="container">
-            <div class="collapse navbar-collapse" id="navcol-1">
-                <ul class="navbar-nav align-items-center me-auto">
-                    <li class="nav-item"><a class="nav-link active" href="index.html">Start</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">CV</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Ervaring</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Hobby's</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
-                </ul>
+<body style="color: var(--bs-blue);background: var(--bs-gray-400);">
+    <header>
+        <nav class="navbar navbar-light navbar-expand-md">
+            <div class="container-fluid"><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+                <div class="collapse navbar-collapse" id="navcol-1"><a class="navbar-brand" href="#index">Voeten Serge</a>
+                    <ul class="navbar-nav me-auto">
+                        <li class="nav-item"><a class="nav-link" href="#cv">CV</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#hobbys">Hobby's</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <main>
+        <div class="container-fluid" style="background: var(--bs-gray-500);">
+            <div class="row">
+                <div class="col-8 mx-auto">
+                    <h1 class="text-center" style="color: var(--bs-dark);">Portfolio</h1>
+                    <p class="text-center"></p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-4 text-center ms-auto" style="margin-top: 20px;padding: 5px;margin-bottom: 40px;">
+                    <picture><img class="img-fluid" src="assets/img/profielfoto.jpg" width="300" height="300" style="border-radius: 50px;margin-left: 0px;"></picture>
+                </div>
+                <div class="col-4 me-auto" style="margin-top: 20px;padding: 5px;margin-bottom: 40px;">
+                    <article>
+                        <h4 class="text-start" style="border-color: var(--bs-white);color: var(--bs-dark);">Voeten Serge</h4>
+                        <ul>
+                            <li style="color: var(--bs-dark);">29 jaar</li>
+                            <li style="color: var(--bs-dark);">Woont in Geel</li>
+                            <li style="color: var(--bs-dark);">Volgt opleiding aan Thomas More Geel</li>
+                        </ul>
+                    </article>
+                </div>
             </div>
         </div>
-    </nav>
-    <div class="container">
-        <div class="row">
-            <div class="col-auto col-xxl-12 offset-xxl-0">
-                <h1 class="text-center" style="transform: perspective(0px);">Welkom op mijn Portfolio.</h1>
-                <p class="text-center d-xxl-flex mx-auto" style="padding: 10px;width: 1000px;height: 100px;margin: 10px;">Mijn naam is Serge Voeten en voor het vak IT-Topics 2
-				stel ik dan ook graag mijn portfolio website voor.&nbsp;
-				Ik ben zelf 29 jaar oud en om meer over mij te weten te komen verwijs ik je graag door naar de
-				andere paginas die via het navigatiemenu bovenaan te bereiken zijn,
-				als u contact wil opnemen kan men dit ook terugvinden op mijn contact pagina.<br>
-				</p>
+    </main>
+    <footer>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col">
+                    <footer class="text-center">
+                        <div class="container text-muted py-4 py-lg-5">
+                            <p class="mb-0">© 2022 Voeten Serge&nbsp;</p>
+                        </div>
+                    </footer>
+                </div>
             </div>
         </div>
-    </div>
+    </footer>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
 </body>
 
