--- a/Site Portfolio/cv.html
+++ b/Site Portfolio/cv.html
@@ -2,9 +2,9 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Start2</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CV</title>
     <link rel="icon" type="image/png" sizes="1000x600" href="assets/img/favicon.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/Footer-Basic.css">
@@ -17,7 +17,7 @@
             <div class="container-fluid"><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navcol-1"><a class="navbar-brand" href="index.html">Voeten Serge</a>
                     <ul class="navbar-nav me-auto">
-                        <li class="nav-item"><a class="nav-link" href="cv.html">CV</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="cv.html">CV</a></li>
                         <li class="nav-item"><a class="nav-link" href="#hobbys">Hobby's</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                     </ul>
@@ -29,23 +29,7 @@
         <div class="container-fluid" style="background: var(--bs-gray-500);">
             <div class="row">
                 <div class="col-8 mx-auto">
-                    <h1 class="text-center" style="color: var(--bs-dark);">Portfolio</h1>
-                    <p class="text-center"></p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-4 text-center ms-auto" style="margin-top: 20px;padding: 5px;margin-bottom: 40px;">
-                    <picture><img class="img-fluid" src="assets/img/profielfoto.jpg" width="300" height="300" style="border-radius: 50px;margin-left: 0px;"></picture>
-                </div>
-                <div class="col-4 me-auto" style="margin-top: 20px;padding: 5px;margin-bottom: 40px;">
-                    <article>
-                        <h4 class="text-start" style="border-color: var(--bs-white);color: var(--bs-dark);">Voeten Serge</h4>
-                        <ul>
-                            <li style="color: var(--bs-dark);">29 jaar</li>
-                            <li style="color: var(--bs-dark);">Woont in Geel</li>
-                            <li style="color: var(--bs-dark);">Volgt opleiding aan Thomas More Geel</li>
-                        </ul>
-                    </article>
+                    <embed src="pdf/CV.pdf" type="application/pdf" width="100%" height="600px" />
                 </div>
             </div>
         </div>
