--- a/Site Portfolio/index.html
+++ b/Site Portfolio/index.html
@@ -1,114 +1,148 @@
 <!DOCTYPE html>
-<html lang="nl">
+<html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Project</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+  <title>Portfolio - StartPagina</title>
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="css/custom.css">
 </head>
 
-<body style="background: var(--bs-gray-400);">
-    <nav class="navbar navbar-light navbar-expand-md">
-        <div class="container-fluid"><a class="navbar-brand" data-bs-toggle="tooltip" data-bss-tooltip=""
-                data-bs-placement="bottom" target="_parent" href="index.html" title="Home"
-                style="transform: scale(1);">Voeten Serge</a><button data-bs-toggle="collapse" class="navbar-toggler"
-                data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span
-                    class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse" id="navcol-1" style="margin: 0px;width: 1155.36px;">
-                <ul class="navbar-nav">
-                    <li class="nav-item"></li>
-                    <li class="nav-item"><a class="nav-link" data-bs-toggle="tooltip" data-bss-tooltip=""
-                            data-bs-placement="bottom" href="#" title="Curriculum Vitae">CV</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Hobby</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <div class="p-5 mb-4 bg-light round-3" style="margin: 12px;">
-        <div class="container-fluid py-5">
-            <h1 class="display-5 text-center fw-bold">Portfolio</h1>
-            <p class="text-center col-md-8 fs-4" style="width: auto;">Welcome on my portfolio, hope you like it !</p>
-        </div>
-    </div>
-    <div class="container-fluid" style="padding: 12px;">
-        <div class="row" style="margin-left: -12px;">
-            <div class="col-md-4" style="margin-bottom: 10px;">
-                <div class="card">
-                    <div class="card-body" style="padding-bottom: 16px;">
-                        <h4 class="card-title">Titel 1</h4>
-                        <p class="card-text">Hier komt tekst.</p><a class="card-link" href="#">Link</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4" style="margin-top: 0px;margin-bottom: 10px;">
-                <div class="card">
-                    <div class="card-body">
-                        <h4 class="card-title">Titel 2</h4>
-                        <p class="card-text">Hier komt ook tekst.</p><a class="card-link" href="#">Link</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4" style="margin-bottom: -10px;">
-                <div class="card">
-                    <div class="card-body">
-                        <h4 class="card-title">Titel 3</h4>
-                        <p class="card-text">Hier komt ook nog tekst</p><a class="card-link" href="#">Link</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <section class="py-4 py-xl-5" style="margin: -40px;margin-right: 0px;margin-left: 0px;margin-top: -16px;">
-        <div class="container-fluid">
-            <div
-                class="bg-light border rounded border-0 border-light d-flex flex-column justify-content-between flex-lg-row p-4 p-md-5">
-                <div class="pb-2 pb-lg-1">
-                    <h2 class="fw-bold mb-2" style="margin-top: 12px;">Voor meer informatie kan u mij altijd contacteren
-                    </h2>
-                </div>
-                <div class="my-2"><a class="btn btn-primary fs-5 py-2 px-4" role="button" href="contact"
-                        style="background: transparent;color: #000000;font-weight: bold;border: 3px solid #000000;border-radius: 15px;">Contact</a>
-                </div>
-            </div>
-        </div>
-    </section>
-    <footer class="text-center">
-        <div class="container text-muted py-4 py-lg-5" style="margin-top: -50px;">
-            <ul class="list-inline">
-                <li class="list-inline-item me-4"></li>
-                <li class="list-inline-item me-4"></li>
-                <li class="list-inline-item me-4"></li>
-                <li class="list-inline-item"></li>
-            </ul>
-            <ul class="list-inline">
-                <li class="list-inline-item me-4"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em"
-                        fill="currentColor" viewBox="0 0 16 16" class="bi bi-facebook">
-                        <path
-                            d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z">
-                        </path>
-                    </svg></li>
-                <li class="list-inline-item me-4"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em"
-                        fill="currentColor" viewBox="0 0 16 16" class="bi bi-twitter">
-                        <path
-                            d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z">
-                        </path>
-                    </svg></li>
-                <li class="list-inline-item"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em"
-                        fill="currentColor" viewBox="0 0 16 16" class="bi bi-instagram">
-                        <path
-                            d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z">
-                        </path>
-                    </svg></li>
-            </ul>
-            <p class="mb-0">© 2022 - Voeten Serge</p>
-        </div>
-    </footer>
+<body>
 
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/bs-init.js"></script>
+<!--Navigatiebalk-->
+
+  <nav class="mb-3 navbar navbar-expand-md rounded-3" style="margin: 15px; font-weight: bold; background-color: lightgrey;">
+    <div class="container-fluid px-5">
+      <a class="navbar-brand" href="index.html" style="font-weight: bold;" data-toggle="tooltip" data-placement="bottom" title="Home">Voeten Serge</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
+        aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span
+          class="navbar-toggler-icon"></span></button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav">
+          <li class="nav-item"><a class="nav-link" href="cv.html">CV</a></li>
+          <li class="nav-item"><a class="nav-link" href="hobby.html">Hobby's</a></li>
+          <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+<!--Navigatiebalk-->
+
+<!--Jumbotron-->
+
+  <div class="p-5 mb-3 rounded-3" style="margin: 15px; background-color: lightgrey;">
+    <div class="container-fluid p-5 justify-content-center">
+      <h1 class="display-5 fw-bold text-center">Portfolio</h1>
+      <p class="col-md fs-4 text-center">Welkom, via bovenstaand menu kan u andere pagina's
+        bereiken.</p>
+    </div>
+  </div>
+
+<!--Jumbotron-->
+
+<!--3 column / cards-->
+
+  <div class="mb-3 rounded-3" style="margin: 15px; background-color: lightgrey;">
+    <div class="container-fluid">
+      <div class="row" style="padding: 20px;">
+        <div class="col-md-4" style="padding: 10px;">
+          <div class="card">
+            <div class="card-body">
+              <h4 class="card-title text-center">Tinlicker</h4>
+              <a href="https://www.soundcloud.com/tinlicker">
+                <p class="text-center" style="padding-top: 10px;">
+                  <img src="img/tinlicker.jpg" style="width: 250px; height: 250px;" class="img-fluid">
+                </p>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4" style="padding: 10px;">
+          <div class="card">
+            <div class="card-body">
+              <h4 class="card-title text-center">Bootstrap</h4>
+              <a href="https://getbootstrap.com">
+                <p class="text-center" style="padding-top: 10px;">
+                  <img src="img/bootstrap.jpg" style="width: 250px; height: 250px;" class="img-fluid">
+                </p>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4" style="padding: 10px;">
+          <div class="card">
+            <div class="card-body">
+              <h4 class="card-title text-center">Thomas More</h4>
+              <a href="https://www.thomasmore.be">
+                <p class="text-center" style="padding-top: 10px;">
+                  <img src="img/school.jpg" style="width: 250px; height: 250px;" class="img-fluid">
+                </p>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+<!--3 column / cards-->
+
+<!--Call to action-->
+
+  <div class="rounded-3" style="margin: 15px; background-color: lightgrey;">
+    <div class="container-fluid p-5">
+      <div class="row">
+        <div class="col-md-8">
+          <div class="d-flex justify-content-center">
+            <h2 class="fw-bold text-center">Voor meer informatie kan u mij altijd contacteren</h2>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="d-flex justify-content-center">
+            <a class="btn fs-5 py-2 px-4" role="button" href="contact.html" 
+              style="border: 3px solid ;border-radius: 10px; margin-top: 10px; font-weight: bold;">Contact
+            </a>
+          </div>  
+        </div>
+      </div>
+    </div>
+  </div>
+
+<!--Call to acton-->
+
+<!--Footer-->
+
+  <footer class="footer mt-auto py-3 rounded-3 text-center" style="background-color: lightgrey; margin: 15px;">
+    <div class="container" style="padding: 15px;">
+      <ul class="list-inline">
+        <a href="https://www.facebook.com">
+          <li class="list-inline-item me-4"><svg class="bi bi-facebook" xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="black" viewBox="0 0 16 16">
+              <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"></path></svg>
+          </li>
+        </a>
+        <a href="https://www.twitter.com">
+          <li class="list-inline-item me-4"><svg class="bi bi-twitter" xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="black" viewBox="0 0 16 16">
+              <path d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z"></path></svg>
+          </li>
+        </a>
+        <a href="https://www.instagram.com">
+          <li class="list-inline-item"><svg class="bi bi-instagram" xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="black" viewBox="0 0 16 16">
+              <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z"></path></svg>
+          </li>
+        </a>
+      </ul>
+        <span class="text-muted text-center">&copy; 2022 - Voeten Serge</span>
+    </div>
+  </footer>
+
+<!--Footer-->
+
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/scripts.js"></script>
 
 </body>
 
