navbar style changes

--- a/Site Portfolio/contact.html
+++ b/Site Portfolio/contact.html
@@ -6,17 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio - Contact</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="css/custom.css">
+    <link rel="stylesheet" type="text/css" href="css/navbar-custom.css">
 </head>
 <body>
 <!--Navigatiebalk-->
-<nav class="navbar navbar-expand-md bg-light text-dark rounded-3" style="margin: 20px; font-weight: bold;">
+<nav class="navbar navbar-expand-md rounded-3 custom-nav">
     <div class="container-fluid px-5">
-        <a class="navbar-brand" href="index.html" style="font-weight: bold;" data-toggle="tooltip" data-placement="bottom" title="Home">Voeten Serge</a>
+        <a class="navbar-brand" href="index.html" data-toggle="tooltip" data-placement="bottom" title="Home">Voeten Serge</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav">
                 <li class="nav-item"><a class="nav-link" href="cv.html">CV</a></li>
+                <li class="nav-tiem"><a class="nav-link" href="ervaring.html">Ervaring</a></li>
                 <li class="nav-item"><a class="nav-link" href="hobby.html">Hobby's</a></li>
                 <li class="nav-item"><a class="nav-link active" href="contact.html">Contact</a></li>
             </ul>
