--- a/Site Portfolio/hobby.html
+++ b/Site Portfolio/hobby.html
@@ -24,9 +24,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link active" href="cv.html">CV</a></li>
+                <li class="nav-item"><a class="nav-link" href="cv.html">CV</a></li>
                 <li class="nav-tiem"><a class="nav-link" href="ervaring.html">Ervaring</a></li>
-                <li class="nav-item"><a class="nav-link" href="hobby.html">Hobby's</a></li>
+                <li class="nav-item"><a class="nav-link active" href="hobby.html">Hobby's</a></li>
                 <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
             </ul>
         </div>
