stylesheet for every element made

--- a/Site Portfolio/index.html
+++ b/Site Portfolio/index.html
@@ -8,6 +8,10 @@
   <title>Portfolio - StartPagina</title>
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="css/navbar-custom.css">
+  <link rel="stylesheet" type="text/css" href="css/jumbotron-index.css">
+  <link rel="stylesheet" type="text/css" href="css/3column-cards-index.css">
+  <link rel="stylesheet" type="text/css" href="css/calltoaction-index.css">
+  <link rel="stylesheet" type="text/css" href="css/footer-custom.css">
 </head>
 
 <body>
@@ -38,7 +42,7 @@
 
 <!--Jumbotron-->
 
-  <div class="p-5 mb-3 rounded-3" style="margin: 15px; background-color: lightgrey;">
+  <div class="p-5 mb-3 rounded-3 jumbo">
     <div class="container-fluid p-5 justify-content-center">
       <h1 class="display-5 fw-bold text-center">Portfolio</h1>
       <p class="col-md fs-4 text-center">Welkom, via bovenstaand menu kan u andere pagina's
@@ -50,40 +54,40 @@
 
 <!--3 column / cards-->
 
-  <div class="mb-3 rounded-3" style="margin: 15px; background-color: lightgrey;">
+  <div class="mb-3 rounded-3 column3">
     <div class="container-fluid">
-      <div class="row" style="padding: 20px;">
-        <div class="col-md-4" style="padding: 10px;">
+      <div class="row">
+        <div class="col-md-4">
           <div class="card">
             <div class="card-body">
               <h4 class="card-title text-center">Tinlicker</h4>
               <a href="https://www.soundcloud.com/tinlicker">
-                <p class="text-center" style="padding-top: 10px;">
-                  <img src="img/tinlicker.jpg" style="width: 250px; height: 250px;" class="img-fluid">
+                <p class="text-center ptext">
+                  <img src="img/tinlicker.jpg" class="img-fluid">
                 </p>
               </a>
             </div>
           </div>
         </div>
-        <div class="col-md-4" style="padding: 10px;">
+        <div class="col-md-4">
           <div class="card">
             <div class="card-body">
               <h4 class="card-title text-center">Bootstrap</h4>
               <a href="https://getbootstrap.com">
-                <p class="text-center" style="padding-top: 10px;">
-                  <img src="img/bootstrap.jpg" style="width: 250px; height: 250px;" class="img-fluid">
+                <p class="text-center ptext">
+                  <img src="img/bootstrap.jpg" class="img-fluid">
                 </p>
               </a>
             </div>
           </div>
         </div>
-        <div class="col-md-4" style="padding: 10px;">
+        <div class="col-md-4">
           <div class="card">
             <div class="card-body">
               <h4 class="card-title text-center">Thomas More</h4>
               <a href="https://www.thomasmore.be">
-                <p class="text-center" style="padding-top: 10px;">
-                  <img src="img/school.jpg" style="width: 250px; height: 250px;" class="img-fluid">
+                <p class="text-center ptext">
+                  <img src="img/school.jpg" class="img-fluid">
                 </p>
               </a>
             </div>
@@ -97,7 +101,7 @@
 
 <!--Call to action-->
 
-  <div class="rounded-3" style="margin: 15px; background-color: lightgrey;">
+  <div class="rounded-3 cta">
     <div class="container-fluid p-5">
       <div class="row">
         <div class="col-md-8">
@@ -107,8 +111,7 @@
         </div>
         <div class="col-md-4">
           <div class="d-flex justify-content-center">
-            <a class="btn fs-5 py-2 px-4" role="button" href="contact.html"
-              style="border: 3px solid ;border-radius: 10px; margin-top: 10px; font-weight: bold;">Contact
+            <a class="btn fs-5 py-2 px-4 bstyle" role="button" href="contact.html">Contact
             </a>
           </div>
         </div>
@@ -120,8 +123,8 @@
 
 <!--Footer-->
 
-  <footer class="footer mt-auto py-3 rounded-3 text-center" style="background-color: lightgrey; margin: 15px;">
-    <div class="container" style="padding: 15px;">
+  <footer class="footer mt-auto py-3 rounded-3 text-center footer-custom">
+    <div class="container">
       <ul class="list-inline">
         <a href="https://www.facebook.com">
           <li class="list-inline-item me-4"><svg class="bi bi-facebook" xmlns="http://www.w3.org/2000/svg" width="1em"
