--- a/Site Portfolio/index.html
+++ b/Site Portfolio/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" type="text/css" href="css/jumbotron-index.css">
   <link rel="stylesheet" type="text/css" href="css/3column-cards-index.css">
   <link rel="stylesheet" type="text/css" href="css/calltoaction-index.css">
-  <link rel="stylesheet" type="text/css" href="css/footer-custom.css">
+  <link rel="stylesheet" type="text/css" href="css/footer-bg.css">
 </head>
 
 <body>
@@ -101,7 +101,7 @@
 
 <!--Call to action-->
 
-  <div class="rounded-3 cta">
+  <div class="rounded-3 m-3 bg-secondary">
     <div class="container-fluid p-5">
       <div class="row">
         <div class="col-md-8">
@@ -111,7 +111,7 @@
         </div>
         <div class="col-md-4">
           <div class="d-flex justify-content-center">
-            <a class="btn fs-5 py-2 px-4 bstyle" role="button" href="contact.html">Contact
+            <a class="btn fs-5 py-2 px-4 rounded-3 border border-3 border-dark mt-2 fw-bold" role="button" href="contact.html">Contact
             </a>
           </div>
         </div>
@@ -123,8 +123,8 @@
 
 <!--Footer-->
 
-  <footer class="footer mt-auto py-3 rounded-3 text-center footer-custom">
-    <div class="container">
+  <footer class="footer mt-auto p-3 m-3 rounded-3 text-center bg-secondary">
+    <div class="container p-3">
       <ul class="list-inline">
         <a href="https://www.facebook.com">
           <li class="list-inline-item me-4"><svg class="bi bi-facebook" xmlns="http://www.w3.org/2000/svg" width="1em"
