cv embedded in page

--- a/Site Portfolio/cv.html
+++ b/Site Portfolio/cv.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/navbar-custom.css">
     <link rel="stylesheet" type="text/css" href="css/footer-custom.css">
-
+    <link rel="stylesheet" type="text/css" href="css/embed-pdf.css">
 </head>
 <body>
 
@@ -30,6 +30,26 @@
 </nav>
 
 <!--Navigatiebalk-->
+
+<!--Embed PDF-->
+
+<div class="p-4 rounded-3 embedpdf m-3">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col">
+        <div class="embed-responsive">
+          <object class="embed-responsive-item" width="100%" height="800px" data="pdf/CV.pdf"
+             type="application/pdf" internalinstanceid="9" title="">
+             <p class="text-center">Je browser ondersteunt het weergeven van de pdf niet, download hem <a href="pdf/CV.pdf">hier</a></p>
+          </object>
+       </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!--Embed PDF-->
+
 
 <!--Footer-->
 
