bootstrap style changes

--- a/Site Portfolio/cv.html
+++ b/Site Portfolio/cv.html
@@ -6,15 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Portfolio - CV</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="css/navbar-custom.css">
-    <link rel="stylesheet" type="text/css" href="css/footer-custom.css">
-    <link rel="stylesheet" type="text/css" href="css/embed-pdf.css">
 </head>
 <body>
 
 <!--Navigatiebalk-->
 
-<nav class="navbar navbar-expand-md rounded-3 custom-nav">
+<nav class="navbar navbar-expand-md rounded-3 bg-secondary m-3">
     <div class="container-fluid px-5">
         <a class="navbar-brand" href="index.html" data-toggle="tooltip" data-placement="bottom" title="Home">Voeten Serge</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -33,7 +30,7 @@
 
 <!--Embed PDF-->
 
-<div class="p-4 rounded-3 embedpdf m-3">
+<div class="p-4 rounded-3 embedpdf m-3 bg-secondary">
   <div class="container-fluid">
     <div class="row">
       <div class="col">
@@ -53,7 +50,7 @@
 
 <!--Footer-->
 
-<footer class="footer mt-auto py-3 rounded-3 text-center footer-custom">
+<footer class="footer mt-auto py-3 rounded-3 text-center bg-secondary m-3">
     <div class="container">
       <ul class="list-inline">
         <a href="https://www.facebook.com">
