--- a/Site Portfolio/ervaring.html
+++ b/Site Portfolio/ervaring.html
@@ -7,16 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Portfolio - Ervaring</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="css/navbar-custom.css">
-    <link rel="stylesheet" type="text/css" href="css/footer-custom.css">
-
 </head>
 
 <body>
 
 <!--Navigatiebalk-->
 
-  <nav class="mb-3 navbar navbar-expand-md rounded-3 custom-nav">
+  <nav class="navbar navbar-expand-md rounded-3 bg-secondary m-3">
     <div class="container-fluid px-5">
       <a class="navbar-brand" href="index.html" data-toggle="tooltip" data-placement="bottom" title="Home">Voeten Serge
       </a>
@@ -40,7 +37,7 @@
 
 <!--Footer-->
 
-<footer class="footer mt-auto py-3 rounded-3 text-center footer-custom">
+<footer class="footer mt-auto py-3 rounded-3 text-center bg-secondary m-3">
   <div class="container">
     <ul class="list-inline">
       <a href="https://www.facebook.com">
