--- a/Site Portfolio/index.html
+++ b/Site Portfolio/index.html
@@ -7,18 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
   <title>Portfolio - StartPagina</title>
   <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="css/navbar-custom.css">
-  <link rel="stylesheet" type="text/css" href="css/jumbotron-index.css">
-  <link rel="stylesheet" type="text/css" href="css/3column-cards-index.css">
-  <link rel="stylesheet" type="text/css" href="css/calltoaction-index.css">
-  <link rel="stylesheet" type="text/css" href="css/footer-bg.css">
 </head>
 
 <body>
 
 <!--Navigatiebalk-->
 
-  <nav class="mb-3 navbar navbar-expand-md rounded-3 custom-nav">
+  <nav class="navbar navbar-expand-md rounded-3 bg-secondary m-3">
     <div class="container-fluid px-5">
       <a class="navbar-brand" href="index.html" data-toggle="tooltip" data-placement="bottom" title="Home">Voeten Serge
       </a>
@@ -42,7 +37,7 @@
 
 <!--Jumbotron-->
 
-  <div class="p-5 mb-3 rounded-3 jumbo">
+  <div class="p-5 rounded-3 bg-secondary m-3">
     <div class="container-fluid p-5 justify-content-center">
       <h1 class="display-5 fw-bold text-center">Portfolio</h1>
       <p class="col-md fs-4 text-center">Welkom, via bovenstaand menu kan u andere pagina's
@@ -54,7 +49,7 @@
 
 <!--3 column / cards-->
 
-  <div class="mb-3 rounded-3 column3">
+  <div class="rounded-3 bg-secondary m-3 p-3">
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-4">
