--- a/Site Portfolio/ervaring.html
+++ b/Site Portfolio/ervaring.html
@@ -13,8 +13,8 @@
 
 <!--Navigatiebalk-->
 
-  <nav class="navbar navbar-expand-md rounded-3 bg-secondary m-3">
-    <div class="container-fluid px-5">
+  <nav class="navbar navbar-expand-md rounded-3 bg-secondary mx-3 mt-3">
+    <div class="container-fluid px-3">
       <a class="navbar-brand" href="index.html" data-toggle="tooltip" data-placement="bottom" title="Home">Voeten Serge
       </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
@@ -34,6 +34,76 @@
   </nav>
 
 <!--Navigatiebalk-->
+
+<!--Carousel-->
+
+<div class="container-fluid">
+  <div class="row">
+    <div class="col m-3 bg-secondary p-3 rounded-3">
+      <div id="carouselExampleSlidesOnly" class="carousel slide" data-mdb-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="img/foto1.jpg" class="d-block w-100" alt="Coding"/>
+          </div>
+          <div class="carousel-item">
+            <img src="img/foto2.jpg" class="d-block w-100" alt="Coding2"/>
+          </div>
+          <div class="carousel-item">
+            <img src="img/foto3.jpg" class="d-block w-100" alt="Coding3"/>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!--Carousel-->
+<div class="mx-3 mb-3">
+  <div class="container-fluid">
+    <div class="row rounded-3 bg-secondary">
+      <div class="col-6 p-3">
+        <table class="table text-center">
+          <thead class="table-dark">
+            <tr>
+              <th scope="col">Mijn sterke punten</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th scope="row">Stressbestendig</th>
+            </tr>
+            <tr>
+              <th scope="row">Sociaal sterk</th>
+            </tr>
+            <tr>
+              <th scope="row">Multi inzetbaar</th>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <div class="col-6 p-3">
+        <table class="table text-center">
+          <thead class="table-dark">
+            <tr>
+              <th scope="col">Mijn iets mindere punten</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th scope="row">Koppig</th>
+            </tr>
+            <tr>
+              <th scope="row">Niet altijd ordelijk</th>
+            </tr>
+            <tr>
+              <th scope="row">Soms chaotisch</th>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+</div>
 
 <!--Footer-->
 
