nav-bar now showing correctly on every page

--- a/Site Portfolio/index.html
+++ b/Site Portfolio/index.html
@@ -13,8 +13,8 @@
 
 <!--Navigatiebalk-->
 
-  <nav class="navbar navbar-expand-md rounded-3 bg-secondary m-3">
-    <div class="container-fluid px-5">
+  <nav class="navbar navbar-expand-md rounded-3 bg-secondary mx-3 mt-3">
+    <div class="container-fluid px-3">
       <a class="navbar-brand" href="index.html" data-toggle="tooltip" data-placement="bottom" title="Home">Voeten Serge
       </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
