--- a/Site Portfolio/cv.html
+++ b/Site Portfolio/cv.html
@@ -87,8 +87,12 @@
 
 <!--Footer-->
 
+<!--Scripts-->
+
 <script src="js/bootstrap.bundle.min.js"></script>
 <script src="js/scripts.js"></script>
+
+<!--Scripts-->
 
 </body>
 </html>
