--- a/Site Portfolio/hobby.html
+++ b/Site Portfolio/hobby.html
@@ -74,8 +74,12 @@
 
 <!--Footer-->
 
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/scripts.js"></script>
+<!--Scripts-->
+
+<script src="js/bootstrap.bundle.min.js"></script>
+<script src="js/scripts.js"></script>
+
+<!--Scripts-->
 
 </body>
 
