--- a/Site Portfolio/index.html
+++ b/Site Portfolio/index.html
@@ -155,8 +155,12 @@
 
 <!--Footer-->
 
+<!--Scripts-->
+
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/scripts.js"></script>
+  
+<!--Scripts-->
 
 </body>
 
