Carousel updated - now working

--- a/Site Portfolio/ervaring.html
+++ b/Site Portfolio/ervaring.html
@@ -40,7 +40,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col m-3 bg-secondary p-3 rounded-3">
-      <div id="carouselExampleSlidesOnly" class="carousel slide" data-mdb-ride="carousel">
+      <div id="carousel-slider" class="carousel slide" data-bs-ride="carousel" data-interval="2000">
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img src="img/foto1.jpg" class="d-block w-100" alt="Coding"/>
@@ -144,6 +144,12 @@
 
 <!--Footer-->
 
+<!--Scripts-->
+
+<script src="js/bootstrap.bundle.min.js"></script>
+<script src="js/scripts.js"></script>
+
+<!--Scripts-->
 </body>
 
 </html>
