--- a/Site Portfolio/index.html
+++ b/Site Portfolio/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+  <link rel="icon" type="image/png" sizes="1000x600" href="img/favicon.png">
   <title>Portfolio - StartPagina</title>
   <link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
@@ -159,7 +160,7 @@
 
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/scripts.js"></script>
-  
+
 <!--Scripts-->
 
 </body>
