--- a/Site Portfolio/ervaring.html
+++ b/Site Portfolio/ervaring.html
@@ -66,18 +66,18 @@
         <table class="table text-center">
           <thead class="table-dark">
             <tr>
-              <th scope="col">Mijn sterke punten</th>
+              <th scope="col">Applications / OS</th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <th scope="row">Stressbestendig</th>
+              <th scope="row">Windows Server</th>
             </tr>
             <tr>
-              <th scope="row">Sociaal sterk</th>
+              <th scope="row">MS SQL Management Studio</th>
             </tr>
             <tr>
-              <th scope="row">Multi inzetbaar</th>
+              <th scope="row">Linux Distros</th>
             </tr>
           </tbody>
         </table>
@@ -86,18 +86,18 @@
         <table class="table text-center">
           <thead class="table-dark">
             <tr>
-              <th scope="col">Mijn iets mindere punten</th>
+              <th scope="col">Skills</th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <th scope="row">Koppig</th>
+              <th scope="row">SQL</th>
             </tr>
             <tr>
-              <th scope="row">Niet altijd ordelijk</th>
+              <th scope="row">HTML & CSS</th>
             </tr>
             <tr>
-              <th scope="row">Soms chaotisch</th>
+              <th scope="row">Javascript</th>
             </tr>
           </tbody>
         </table>
